--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 	<link href="favicon.ico" rel="shortcut icon">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<!--Style-->
-	<link rel="stylesheet" href="css/libs.min.css">
+	<!--<link rel="stylesheet" href="css/libs.min.css">-->
 	<link rel="stylesheet" href="css/main.css">
 	<!--Modernizr-->
 	<script src="js/modernizr.min.js"></script>
@@ -32,29 +32,32 @@
 	<div class="wrapper">
 		<!--HEADER-->
 		<header class="header">
-			<div class="layout">
+			<div class="layout-inside">
 				<div class="header__holder">
-					<!--logo-->
-					<strong class="logo"><a href="index.html">Project Name</a><img style="display: none;" src="img/logo.png" alt="Project Name"></strong>
-					<!--logo end-->
 					<!--main navigation-->
 					<div class="main-nav">
 						<nav class="nav">
 							<ul class="nav__list">
 								<li class="has-drop">
-									<a href="about.html"><span>About</span></a>
+									<a href="biography.html"><span>Биография</span></a>
 								</li>
 								<li class="has-drop">
-									<a href="news.html"><span>News</span></a>
+									<a href="photos.html"><span>Фотоальбом</span></a>
 								</li>
 								<li class="has-drop">
-									<a href="contact.html"><span>Contact</span></a>
+									<a href="videos.html"><span>Видео</span></a>
 								</li>
 								<li class="has-drop">
-									<a href="photos.html"><span>Photos</span></a>
+									<a href="publications.html"><span>Публикации</span></a>
 								</li>
 								<li class="has-drop">
-									<a href="faq.html"><span>FAQ</span></a>
+									<a href="works.html"><span>Труды</span></a>
+								</li>
+								<li class="has-drop">
+									<a href="links.html"><span>Ссылки</span></a>
+								</li>
+								<li class="has-drop">
+									<a href="blog.html"><span>Блог</span></a>
 								</li>
 							</ul>
 						</nav>
@@ -75,8 +78,9 @@
 							<div class="breadcrumbs">
 								<ul class="breadcrumbs__list">
 									<li><a href="#">Главная</a></li>
-									<li><a href="#">Категории</a></li>
-									<li>Подкатегории</li>
+									<li><a href="#">Фотоальбом</a></li>
+									<li><a href="#">Научная деятельность</a></li>
+									<li>Участие в научных мероприятиях</li>
 								</ul>
 							</div>
 							<!--breadcrumbs end-->
@@ -98,197 +102,35 @@
 							<!--menu-->
 							<div class="menu">
 								<ul class="menu__list">
-									<li class="has-drop current">
-										<a href="about.html"><span>About</span></a>
-										<div class="nav__drop js-nav-drop">
-											<ul class="sub1-nav__list">
-												<li><a href="#"><span>Item 1.1</span></a></li>
-												<li class="has-drop">
-													<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-													<div class="sub1-nav__drop js-nav-drop">
-														<ul class="sub2-nav__list">
-															<li class="has-drop">
-																<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-																<div class="sub2-nav__drop js-nav-drop">
-																	<ul class="sub3-nav__list">
-																		<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																	</ul>
-																</div>
-															</li>
-															<li><a href="#"><span>Item 1.2.2</span></a></li>
-															<li><a href="#"><span>Item 1.2.3</span></a></li>
-															<li><a href="#"><span>Item 1.2.4</span></a> </li>
-														</ul>
-													</div>
-												</li>
-												<li><a href="#"><span>Item 1.3</span></a></li>
-												<li><a href="#"><span>Item 1.4</span></a></li>
-												<li><a href="#"><span>Item 1.5</span></a></li>
-												<li><a href="#"><span>Item 1.6</span></a></li>
-												<li><a href="#"><span>Item 1.7</span></a></li>
-											</ul>
-										</div>
+									<li>
+										<a href="#"><span>Научная деятельность</span></a>
+										<ul>
+											<li>
+												<a href="#"><span>Защита докторской диссертации</span></a>
+											</li>
+											<li>
+												<a href="#"><span>Презентации научных трудов</span></a>
+											</li>
+											<li class="current">
+												<a href="#"><span>Участие в научных мероприятиях</span></a>
+											</li>
+										</ul>
 									</li>
-									<li class="has-drop">
-										<a href="news.html"><span>News</span></a>
-										<div class="nav__drop js-nav-drop">
-											<ul class="sub1-nav__list">
-												<li><a href="#"><span>Item 1.1</span></a></li>
-												<li class="has-drop">
-													<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-													<div class="sub1-nav__drop js-nav-drop">
-														<ul class="sub2-nav__list">
-															<li class="has-drop">
-																<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-																<div class="sub2-nav__drop js-nav-drop">
-																	<ul class="sub3-nav__list">
-																		<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																	</ul>
-																</div>
-															</li>
-															<li><a href="#"><span>Item 1.2.2</span></a></li>
-															<li><a href="#"><span>Item 1.2.3</span></a></li>
-															<li><a href="#"><span>Item 1.2.4</span></a> </li>
-														</ul>
-													</div>
-												</li>
-												<li><a href="#"><span>Item 1.3</span></a></li>
-												<li><a href="#"><span>Item 1.4</span></a></li>
-												<li><a href="#"><span>Item 1.5</span></a></li>
-												<li><a href="#"><span>Item 1.6</span></a></li>
-												<li><a href="#"><span>Item 1.7</span></a></li>
-											</ul>
-										</div>
+									<li>
+										<a href="#"><span>Социокультурная деятельность</span></a>
 									</li>
-									<li class="has-drop">
-										<a href="contact.html"><span>Contact</span></a>
-										<div class="nav__drop js-nav-drop">
-											<ul class="sub1-nav__list">
-												<li><a href="#"><span>Item 1.1</span></a></li>
-												<li class="has-drop">
-													<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-													<div class="sub1-nav__drop js-nav-drop">
-														<ul class="sub2-nav__list">
-															<li class="has-drop">
-																<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-																<div class="sub2-nav__drop js-nav-drop">
-																	<ul class="sub3-nav__list">
-																		<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																	</ul>
-																</div>
-															</li>
-															<li><a href="#"><span>Item 1.2.2</span></a></li>
-															<li><a href="#"><span>Item 1.2.3</span></a></li>
-															<li><a href="#"><span>Item 1.2.4</span></a> </li>
-														</ul>
-													</div>
-												</li>
-												<li><a href="#"><span>Item 1.3</span></a></li>
-												<li><a href="#"><span>Item 1.4</span></a></li>
-												<li><a href="#"><span>Item 1.5</span></a></li>
-												<li><a href="#"><span>Item 1.6</span></a></li>
-												<li><a href="#"><span>Item 1.7</span></a></li>
-											</ul>
-										</div>
+									<li>
+										<a href="#"><span>Международная деятельность</span></a>
 									</li>
-									<li class="has-drop">
-										<a href="photos.html"><span>Photos</span></a>
-										<div class="nav__drop js-nav-drop">
-											<ul class="sub1-nav__list">
-												<li><a href="#"><span>Item 1.1</span></a></li>
-												<li class="has-drop">
-													<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-													<div class="sub1-nav__drop js-nav-drop">
-														<ul class="sub2-nav__list">
-															<li class="has-drop">
-																<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-																<div class="sub2-nav__drop js-nav-drop">
-																	<ul class="sub3-nav__list">
-																		<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																	</ul>
-																</div>
-															</li>
-															<li><a href="#"><span>Item 1.2.2</span></a></li>
-															<li><a href="#"><span>Item 1.2.3</span></a></li>
-															<li><a href="#"><span>Item 1.2.4</span></a> </li>
-														</ul>
-													</div>
-												</li>
-												<li><a href="#"><span>Item 1.3</span></a></li>
-												<li><a href="#"><span>Item 1.4</span></a></li>
-												<li><a href="#"><span>Item 1.5</span></a></li>
-												<li><a href="#"><span>Item 1.6</span></a></li>
-												<li><a href="#"><span>Item 1.7</span></a></li>
-											</ul>
-										</div>
+									<li>
+										<a href="#"><span>Учебно-педагогическая деятельность</span></a>
 									</li>
-									<li class="has-drop">
-										<a href="faq.html"><span>FAQ</span></a>
-										<div class="nav__drop js-nav-drop">
-											<ul class="sub1-nav__list">
-												<li><a href="#"><span>Item 1.1</span></a></li>
-												<li class="has-drop">
-													<a href="#" class="selected"><span>Item 1.2</span><i class="nav__angle"></i></a>
-													<div class="sub1-nav__drop js-nav-drop">
-														<ul class="sub2-nav__list">
-															<li class="has-drop">
-																<a href="#" class="selected"><span>Item 1.2.1</span><i class="nav__angle"></i></a>
-																<div class="sub2-nav__drop js-nav-drop">
-																	<ul class="sub3-nav__list">
-																		<li><a href="#"><span>Item 1.2.1.1</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.2</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.3</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.4</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.5</span></a></li>
-																		<li><a href="#"><span>Item 1.2.1.6</span></a></li>
-																	</ul>
-																</div>
-															</li>
-															<li><a href="#"><span>Item 1.2.2</span></a></li>
-															<li><a href="#"><span>Item 1.2.3</span></a></li>
-															<li><a href="#"><span>Item 1.2.4</span></a> </li>
-														</ul>
-													</div>
-												</li>
-												<li><a href="#"><span>Item 1.3</span></a></li>
-												<li><a href="#"><span>Item 1.4</span></a></li>
-												<li><a href="#"><span>Item 1.5</span></a></li>
-												<li><a href="#"><span>Item 1.6</span></a></li>
-												<li><a href="#"><span>Item 1.7</span></a></li>
-											</ul>
-										</div>
+									<li>
+										<a href="#"><span>Досуг</span></a>
 									</li>
 								</ul>
 							</div>
 							<!--menu end-->
-							<div class="sidebar__widget">
-								<h3>Title of Sidebar Widget</h3>
-								Content of Sidebar Widget
-							</div>
-							<div class="sidebar__widget">
-								<h3>Title of Sidebar Widget</h3>
-								Content of Sidebar Widget
-							</div>
 						</div>
 					</aside>
 					<!--SIDEBAR-->
@@ -313,43 +155,6 @@
 		<!--MAIN end-->
 	</div>
 	<!-- >>> foot.tpl <<< -->
-	<!--footer-->
-	<footer class="footer">
-		<div class="layout">
-			<div class="footer__holder">
-				<!--footer common-->
-				<div class="footer-common">
-					Content of Footer
-				</div>
-				<!--footer common end-->
-
-				<!--footer bottom-->
-				<div class="footer-bottom">
-					<div class="footer-bottom__holder">
-						<div class="footer-bottom__col">
-							<div class="copyright">Copyright &copy; 2017 Project</div>
-						</div>
-						<div class="footer-bottom__col">
-							<a href="#">Правила использования материалов</a>
-						</div>
-						<div class="footer-bottom__col">
-							<!--developer-->
-							<div class="developer">
-								<a href="http://astronim.by/">
-									<span class="developer__label">Сделано командой &mdash;</span>
-									<span class="developer__logo">Astronim*Support</span>
-								</a>
-							</div>
-							<!--developer end-->
-						</div>
-					</div>
-				</div>
-				<!--footer bottom end-->
-			</div>
-		</div>
-	</footer>
-	<!--footer end-->
-
 	<script src="js/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
 	<script src="js/common.js"></script>
