--- a/src/photos.html
+++ b/src/photos.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<!--[if lt IE 9]>      <html class="no-js old-ie" lang="ru"> <![endif]-->
+<!--[if IE 9]>         <html class="no-js ie9" lang="ru"> <![endif]-->
+<!--[if gt IE 9]><!-->
+<html class="no-js" lang="ru">
+<!--<![endif]-->
 
 <head>
 	<meta charset="UTF-8">
@@ -45,34 +49,35 @@
 						<div class="layout-inside">
 							<div class="header__holder">
 								<!--main navigation-->
-								<div class="main-nav">
-									<nav class="nav">
-										<ul class="nav__list">
-											<li class="has-drop">
-												<a href="biography.html"><span>Биография</span></a>
-											</li>
-											<li class="has-drop current">
-												<a href="photos.html"><span>Фотоальбом</span></a>
-											</li>
-											<li class="has-drop">
-												<a href="videos.html"><span>Видео</span></a>
-											</li>
-											<li class="has-drop">
-												<a href="publications.html"><span>Публикации</span></a>
-											</li>
-											<li class="has-drop">
-												<a href="works.html"><span>Труды</span></a>
-											</li>
-											<li class="has-drop">
-												<a href="links.html"><span>Ссылки</span></a>
-											</li>
-											<li class="has-drop">
-												<a href="blog.html"><span>Блог</span></a>
-											</li>
-										</ul>
-									</nav>
-								</div>
+								<nav class="nav">
+									<ul class="nav__list">
+										<li class="has-drop">
+											<a href="biography.html"><span>Биография</span></a>
+										</li>
+										<li class="has-drop current">
+											<a href="photos.html"><span>Фотоальбом</span></a>
+										</li>
+										<li class="has-drop">
+											<a href="videos.html"><span>Видео</span></a>
+										</li>
+										<li class="has-drop">
+											<a href="publications.html"><span>Публикации</span></a>
+										</li>
+										<li class="has-drop">
+											<a href="works.html"><span>Труды</span></a>
+										</li>
+										<li class="has-drop">
+											<a href="links.html"><span>Ссылки</span></a>
+										</li>
+										<li class="has-drop">
+											<a href="blog.html"><span>Блог</span></a>
+										</li>
+									</ul>
+								</nav>
 								<!--main navigation end-->
+								<!--search-->
+								<a href="#" class="btn-search btn-search-js"><i></i><span>Поиск</span></a>
+								<!--search end-->
 							</div>
 						</div>
 					</header>
