--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 	<link href="favicon.ico" rel="shortcut icon">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<!--Style-->
-	<!--<link rel="stylesheet" href="css/libs.min.css">-->
+	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<!--Modernizr-->
 	<script src="js/modernizr.min.js"></script>
@@ -82,10 +82,10 @@
 							<!--breadcrumbs-->
 							<div class="breadcrumbs">
 								<ul class="breadcrumbs__list">
-									<li><a href="#">Главная</a></li>
-									<li><a href="#">Фотоальбом</a></li>
-									<li><a href="#">Научная деятельность</a></li>
-									<li>Участие в научных мероприятиях</li>
+									<li><a href="#"><span>Главная</span></a></li>
+									<li><a href="#"><span>Фотоальбом</span></a></li>
+									<li><a href="#"><span>Научная деятельность</span></a></li>
+									<li><span>Участие в научных мероприятиях</span></li>
 								</ul>
 							</div>
 							<!--breadcrumbs end-->
