--- a/src/photos.html
+++ b/src/photos.html
@@ -24,7 +24,7 @@
 	<link href="favicon.ico" rel="shortcut icon">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<!--Style-->
-	<!--<link rel="stylesheet" href="css/libs.min.css">-->
+	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<!--Modernizr-->
 	<script src="js/modernizr.min.js"></script>
@@ -91,30 +91,155 @@
 									<!--breadcrumbs-->
 									<div class="breadcrumbs">
 										<ul class="breadcrumbs__list">
-											<li><a href="#">Главная</a></li>
-											<li><a href="#">Фотоальбом</a></li>
-											<li><a href="#">Научная деятельность</a></li>
-											<li>Участие в научных мероприятиях</li>
+											<li><a href="#"><span>Главная</span></a></li>
+											<li><a href="#"><span>Фотоальбом</span></a></li>
+											<li><a href="#"><span>Научная деятельность</span></a></li>
+											<li><span>Участие в научных мероприятиях</span></li>
 										</ul>
 									</div>
 									<!--breadcrumbs end-->
 
 									<h1>Участие в научных мероприятиях</h1>
+									<!--years list-->
 									<div class="years">
-										<ul class="years__list">
-											<li><a href="#"><span>2017</span></a></li>
-											<li><a href="#"><span>2016</span></a></li>
-											<li><a href="#"><span>2015</span></a></li>
-											<li><a href="#"><span>2014</span></a></li>
-											<li><a href="#"><span>2013</span></a></li>
-											<li><a href="#"><span>2012</span></a></li>
-											<li><a href="#"><span>2011</span></a></li>
-											<li><a href="#"><span>2010</span></a></li>
-											<li><a href="#"><span>2009</span></a></li>
-											<li><a href="#"><span>2008</span></a></li>
-											<li><a href="#"><span>2007</span></a></li>
-										</ul>
+										<div class="swiper-container years-slider-js">
+											<ul class="years__list swiper-wrapper">
+												<li class="swiper-slide current"><a href="#"><span>2017</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2016</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2015</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2014</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2013</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2012</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2011</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2010</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2009</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2008</span></a></li>
+												<li class="swiper-slide"><a href="#"><span>2007</span></a></li>
+											</ul>
+										</div>
+
+										<div class="swiper-button-prev"><i></i><span>Назад</span></div>
+										<div class="swiper-button-next"><i></i><span>Вперед</span></div>
 									</div>
+									<!--years list end-->
+
+									<p>Защита докторской диссертации на тему «Библиотека как социальный институт: теоретико-методологический аспект». 30 января 2003 г. Белорусский государственный университет культуры и искусств (БГУКИ). Минск.</p>
+
+									<!--gallery-->
+									<div class="gallery">
+										<div class="gallery__toolbar">
+											<div class="swiper-pagination swiper-pagination-fraction">
+												<span class="swiper-pagination-current">2</span> / <span class="swiper-pagination-total">10</span>
+											</div>
+											<div class="swiper-button-prev"><i></i><span>Назад</span></div>
+											<div class="swiper-button-next"><i></i><span>Вперед</span></div>
+										</div>
+										<div class="gallery__visual">
+											<div class="swiper-container gallery-js">
+												<div class="swiper-wrapper">
+
+													<div class="swiper-slide">
+														<a href="#" class="swiper-slide__inner">
+															<img src="img/img-g-01.jpg" alt="image description" /> </a>
+													</div>
+
+													<div class="swiper-slide">
+														<a href="#" class="swiper-slide__inner">
+															<img src="img/img-g-02.jpg" alt="image description" /> </a>
+													</div>
+
+													<div class="swiper-slide">
+														<a href="#" class="swiper-slide__inner">
+															<img src="img/img-g-03.jpg" alt="image description" /> </a>
+													</div>
+
+													<div class="swiper-slide">
+														<a href="#" class="swiper-slide__inner">
+															<img src="img/img-g-04.jpg" alt="image description" /> </a>
+													</div>
+
+													<div class="swiper-slide">
+														<a href="#" class="swiper-slide__inner">
+															<img src="img/img-g-05.jpg" alt="image description" /> </a>
+													</div>
+
+													<div class="swiper-slide">
+														<a href="#" class="swiper-slide__inner">
+															<img src="img/img-g-06.jpg" alt="image description" /> </a>
+													</div>
+
+													<div class="swiper-slide">
+														<a href="#" class="swiper-slide__inner">
+															<img src="img/img-g-07.jpg" alt="image description" /> </a>
+													</div>
+
+													<div class="swiper-slide">
+														<a href="#" class="swiper-slide__inner">
+															<img src="img/img-g-08.jpg" alt="image description" /> </a>
+													</div>
+
+													<div class="swiper-slide">
+														<a href="#" class="swiper-slide__inner">
+															<img src="img/img-g-09.jpg" alt="image description" /> </a>
+													</div>
+
+												</div>
+											</div>
+										</div>
+										<div class="gallery__captions">
+											<div class="swiper-container gallery-captions-js">
+												<div class="swiper-wrapper">
+
+													<div class="gallery__caption swiper-slide">
+														<p>01 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
+															государственного университета культуры и искусств.</p>
+													</div>
+
+													<div class="gallery__caption swiper-slide">
+														<p>02 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
+															государственного университета культуры и искусств.</p>
+													</div>
+
+													<div class="gallery__caption swiper-slide">
+														<p>03 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
+															государственного университета культуры и искусств.</p>
+													</div>
+
+													<div class="gallery__caption swiper-slide">
+														<p>04 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
+															государственного университета культуры и искусств.</p>
+													</div>
+
+													<div class="gallery__caption swiper-slide">
+														<p>05 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
+															государственного университета культуры и искусств.</p>
+													</div>
+
+													<div class="gallery__caption swiper-slide">
+														<p>06 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
+															государственного университета культуры и искусств.</p>
+													</div>
+
+													<div class="gallery__caption swiper-slide">
+														<p>07 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
+															государственного университета культуры и искусств.</p>
+													</div>
+
+													<div class="gallery__caption swiper-slide">
+														<p>08 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
+															государственного университета культуры и искусств.</p>
+													</div>
+
+													<div class="gallery__caption swiper-slide">
+														<p>09 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
+															государственного университета культуры и искусств.</p>
+													</div>
+
+												</div>
+											</div>
+										</div>
+									</div>
+									<!--gallery end-->
 								</div>
 							</div>
 							<!--CONTENT end-->
@@ -169,16 +294,16 @@
 							<div class="footer-bottom">
 								<div class="footer-bottom__holder">
 									<div class="footer-bottom__col">
-										<div class="footer-contacts">Тел: +375 (17) 266-37-00 <span class="mark">/</span> Факс: +375 (17) 266-37-06</div>
-									</div>
-									<div class="footer-bottom__col">
-										<a href="#">Правила использования материалов</a>
+										<ul class="footer-bottom__contacts">
+											<li>Тел: +375 (17) 266-37-00</li>
+											<li>Факс: +375 (17) 266-37-06</li>
+										</ul>
 									</div>
 									<div class="footer-bottom__col">
 										<!--developer-->
 										<div class="developer">
 											<a href="http://astronim.by/">
-												<span class="developer__label">Сделано командой &mdash;</span>
+												<span class="developer__label">Разработка сайта &mdash;</span>
 												<span class="developer__logo">Astronim*Support</span>
 											</a>
 										</div>
