--- a/src/typography.html
+++ b/src/typography.html
@@ -36,6 +36,24 @@
 	<div class="wrapper">
 		<!--HEADER-->
 		<header class="header">
+			<div class="search-form search-form-js">
+				<div class="layout-inside">
+					<form action="#">
+						<div class="input-wrapper">
+							<input type="search" class="search-field-js" placeholder="Поиск по сайту">
+							<div class="btn-search">
+								<i>&nbsp;</i>
+								<span>Найти</span>
+								<input type="submit" value="">
+							</div>
+							<a href="#" class="btn-search-close btn-search-close-js">
+								<i>&nbsp;</i>
+								<span>Закрыть</span>
+							</a>
+						</div>
+					</form>
+				</div>
+			</div>
 			<div class="layout-inside">
 				<div class="header__holder">
 					<!--main navigation-->
@@ -66,7 +84,7 @@
 					</nav>
 					<!--main navigation end-->
 					<!--search-->
-					<a href="#" class="btn-search btn-search-js"><i></i><span>Поиск</span></a>
+					<a href="#" class="btn-search btn-search-open-js"><i></i><span>Поиск</span></a>
 					<!--search end-->
 				</div>
 			</div>
