--- a/src/__index.html
+++ b/src/__index.html
@@ -1,45 +1,102 @@
 @@include('_head.tpl', {
 	"title": "Главная",
-	"pageClass": ""
+	"pageClass": "home-page"
 })
 <div class="wrapper">
-	<!--HEADER-->
-	@@include('_header.tpl', {
-		"mainNavItemActive": "index"
-	})
-	<!--HEADER end-->
-	<!--MAIN-->
-	<div class="main">
-		<div class="layout">
-			<div class="main__holder">
-				<!--CONTENT-->
-				<div class="content-wrap">
-					<div class="content">
-						<!--breadcrumbs-->
-						@@include('_breadcrumbs.tpl')
-						<!--breadcrumbs end-->
-						<section class="section">
-							<div class="section__title"><h2>Title of Section</h2></div>
-							<div class="section__holder">
-								Content of Section
+	<div class="layout">
+		@@include('_entry.tpl')
+		<div class="page">
+			<div class="cross">
+				<!--HEADER-->
+				@@include('_header.tpl', {
+					"mainNavItemActive": "photos"
+				})
+				<!--HEADER end-->
+				<!--MAIN-->
+				<div class="main">
+					<div class="main__holder">
+						<!--CONTENT-->
+						<div class="content-wrap">
+							<div class="content">
+								<!--breadcrumbs-->
+								@@include('_breadcrumbs.tpl')
+								<!--breadcrumbs end-->
+
+								<h1>Участие в научных мероприятиях</h1>
+								<!--years list-->
+								<div class="years">
+									<div class="swiper-container years-slider-js">
+										<ul class="years__list swiper-wrapper">
+											<li class="swiper-slide current"><a href="#"><span>2017</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2016</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2015</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2014</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2013</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2012</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2011</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2010</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2009</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2008</span></a></li>
+											<li class="swiper-slide"><a href="#"><span>2007</span></a></li>
+										</ul>
+									</div>
+
+									<div class="swiper-button-prev"><i></i><span>Назад</span></div>
+									<div class="swiper-button-next"><i></i><span>Вперед</span></div>
+								</div>
+								<!--years list end-->
+
+								<p>Защита докторской диссертации на тему «Библиотека как социальный институт: теоретико-методологический аспект». 30 января 2003 г. Белорусский государственный университет культуры и искусств (БГУКИ). Минск.</p>
+
+								<!--gallery-->
+								<div class="gallery">
+									<div class="gallery__toolbar">
+										<div class="swiper-pagination swiper-pagination-fraction">
+											<span class="swiper-pagination-current">2</span> / <span class="swiper-pagination-total">10</span>
+										</div>
+										<div class="swiper-button-prev"><i></i><span>Назад</span></div>
+										<div class="swiper-button-next"><i></i><span>Вперед</span></div>
+									</div>
+									<div class="gallery__visual">
+										<div class="swiper-container gallery-js">
+											<div class="swiper-wrapper">
+												@@for (var i = 1; i < 10; i++) {
+												<div class="swiper-slide">
+													<div class="swiper-slide__inner">
+														<img src="img/img-g-0`+i+`.jpg" alt="image description"/> </div>
+												</div>
+												}
+											</div>
+										</div>
+									</div>
+									<div class="gallery__captions">
+										<div class="swiper-container gallery-captions-js">
+											<div class="swiper-wrapper">
+												@@for (var i = 1; i < 10; i++) {
+												<div class="gallery__caption swiper-slide">
+													<p>0`+ i +` Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского государственного университета культуры и искусств.</p>
+												</div>
+												}
+											</div>
+										</div>
+									</div>
+								</div>
+								<!--gallery end-->
 							</div>
-						</section>
+						</div>
+						<!--CONTENT end-->
+
+						<!--SIDEBAR-->
+						@@include('_sidebar.tpl', {
+							"menuItemActive": "1"
+						})
+						<!--SIDEBAR-->
 					</div>
 				</div>
-				<!--CONTENT end-->
-
-				<!--SIDEBAR-->
-				@@include('_sidebar.tpl', {
-					"menuItemActive": "about"
-				})
-				<!--SIDEBAR-->
-
-				<!--ASIDE-->
-				@@include('_aside.tpl')
-				<!--ASIDE end-->
+				<!--MAIN end-->
 			</div>
+			@@include('_footer.tpl')
 		</div>
 	</div>
-	<!--MAIN end-->
 </div>
 @@include('_foot.tpl')
