--- a/src/__photos.html
+++ b/src/__photos.html
@@ -50,7 +50,7 @@
 
 								<!--gallery-->
 								<div class="gallery">
-									<div class="gallery__toolbar">
+									<div class="slider__toolbar">
 										<div class="swiper-pagination swiper-pagination-fraction">
 											<span class="swiper-pagination-current">2</span> / <span class="swiper-pagination-total">10</span>
 										</div>
