--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
 										<li class="has-drop">
 											<a href="biography.html"><span>Биография</span></a>
 										</li>
-										<li class="has-drop current">
+										<li class="has-drop">
 											<a href="photos.html"><span>Фотоальбом</span></a>
 										</li>
 										<li class="has-drop">
@@ -117,158 +117,56 @@
 							<!--CONTENT-->
 							<div class="content-wrap">
 								<div class="content">
-									<!--breadcrumbs-->
-									<div class="breadcrumbs">
-										<ul class="breadcrumbs__list">
-											<li><a href="#"><span>Главная</span></a></li>
-											<li><a href="#"><span>Фотоальбом</span></a></li>
-											<li><a href="#"><span>Научная деятельность</span></a></li>
-											<li><span>Участие в научных мероприятиях</span></li>
-										</ul>
-									</div>
-									<!--breadcrumbs end-->
-
-									<h1>Участие в научных мероприятиях</h1>
-									<!--years list-->
-									<div class="years">
-										<div class="swiper-container years-slider-js">
-											<ul class="years__list swiper-wrapper">
-												<li class="swiper-slide current"><a href="#"><span>2017</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2016</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2015</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2014</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2013</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2012</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2011</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2010</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2009</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2008</span></a></li>
-												<li class="swiper-slide"><a href="#"><span>2007</span></a></li>
-											</ul>
-										</div>
-
-										<div class="swiper-button-prev"><i></i><span>Назад</span></div>
-										<div class="swiper-button-next"><i></i><span>Вперед</span></div>
-									</div>
-									<!--years list end-->
-
-									<p>Защита докторской диссертации на тему «Библиотека как социальный институт: теоретико-методологический аспект». 30 января 2003 г. Белорусский государственный университет культуры и искусств (БГУКИ). Минск.</p>
-
-									<!--gallery-->
-									<div class="gallery">
-										<div class="gallery__toolbar">
+									<!--quotes-->
+									<div class="quotes">
+										<div class="slider__toolbar">
 											<div class="swiper-pagination swiper-pagination-fraction">
 												<span class="swiper-pagination-current">2</span> / <span class="swiper-pagination-total">10</span>
 											</div>
-											<div class="swiper-button-prev"><i></i><span>Назад</span></div>
-											<div class="swiper-button-next"><i></i><span>Вперед</span></div>
 										</div>
-										<div class="gallery__visual">
-											<div class="swiper-container gallery-js">
-												<div class="swiper-wrapper">
+										<div class="swiper-container slider-quoter-js">
+											<div class="swiper-wrapper">
 
-													<div class="swiper-slide">
-														<div class="swiper-slide__inner">
-															<img src="img/img-g-01.jpg" alt="image description" /> </div>
+												<div class="swiper-slide">
+													<div class="swiper-slide__inner">
+														<h3>01 Книга – это настроение, и пусть оно как можно чаще будет положительным!</h3>
+														<p>«При всём многообразии сегодняшнего выбора я уверен, что книга – это глубоко индивидуальное явление. Ведь мы читаем для души, а у каждого она своя, по-своему болит, по-своему радуется, и поэтому лекарство для нее каждый из нас должен выбирать
+															сам!»</p>
 													</div>
-
-													<div class="swiper-slide">
-														<div class="swiper-slide__inner">
-															<img src="img/img-g-02.jpg" alt="image description" /> </div>
-													</div>
-
-													<div class="swiper-slide">
-														<div class="swiper-slide__inner">
-															<img src="img/img-g-03.jpg" alt="image description" /> </div>
-													</div>
-
-													<div class="swiper-slide">
-														<div class="swiper-slide__inner">
-															<img src="img/img-g-04.jpg" alt="image description" /> </div>
-													</div>
-
-													<div class="swiper-slide">
-														<div class="swiper-slide__inner">
-															<img src="img/img-g-05.jpg" alt="image description" /> </div>
-													</div>
-
-													<div class="swiper-slide">
-														<div class="swiper-slide__inner">
-															<img src="img/img-g-06.jpg" alt="image description" /> </div>
-													</div>
-
-													<div class="swiper-slide">
-														<div class="swiper-slide__inner">
-															<img src="img/img-g-07.jpg" alt="image description" /> </div>
-													</div>
-
-													<div class="swiper-slide">
-														<div class="swiper-slide__inner">
-															<img src="img/img-g-08.jpg" alt="image description" /> </div>
-													</div>
-
-													<div class="swiper-slide">
-														<div class="swiper-slide__inner">
-															<img src="img/img-g-09.jpg" alt="image description" /> </div>
-													</div>
-
 												</div>
+
+												<div class="swiper-slide">
+													<div class="swiper-slide__inner">
+														<h3>02 Книга – это настроение, и пусть оно как можно чаще будет положительным!</h3>
+														<p>«При всём многообразии сегодняшнего выбора я уверен, что книга – это глубоко индивидуальное явление. Ведь мы читаем для души, а у каждого она своя, по-своему болит, по-своему радуется, и поэтому лекарство для нее каждый из нас должен выбирать
+															сам!»</p>
+													</div>
+												</div>
+
+												<div class="swiper-slide">
+													<div class="swiper-slide__inner">
+														<h3>03 Книга – это настроение, и пусть оно как можно чаще будет положительным!</h3>
+														<p>«При всём многообразии сегодняшнего выбора я уверен, что книга – это глубоко индивидуальное явление. Ведь мы читаем для души, а у каждого она своя, по-своему болит, по-своему радуется, и поэтому лекарство для нее каждый из нас должен выбирать
+															сам!»</p>
+													</div>
+												</div>
+
+												<div class="swiper-slide">
+													<div class="swiper-slide__inner">
+														<h3>04 Книга – это настроение, и пусть оно как можно чаще будет положительным!</h3>
+														<p>«При всём многообразии сегодняшнего выбора я уверен, что книга – это глубоко индивидуальное явление. Ведь мы читаем для души, а у каждого она своя, по-своему болит, по-своему радуется, и поэтому лекарство для нее каждый из нас должен выбирать
+															сам!»</p>
+													</div>
+												</div>
+
 											</div>
 										</div>
-										<div class="gallery__captions">
-											<div class="swiper-container gallery-captions-js">
-												<div class="swiper-wrapper">
-
-													<div class="gallery__caption swiper-slide">
-														<p>01 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
-															государственного университета культуры и искусств.</p>
-													</div>
-
-													<div class="gallery__caption swiper-slide">
-														<p>02 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
-															государственного университета культуры и искусств.</p>
-													</div>
-
-													<div class="gallery__caption swiper-slide">
-														<p>03 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
-															государственного университета культуры и искусств.</p>
-													</div>
-
-													<div class="gallery__caption swiper-slide">
-														<p>04 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
-															государственного университета культуры и искусств.</p>
-													</div>
-
-													<div class="gallery__caption swiper-slide">
-														<p>05 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
-															государственного университета культуры и искусств.</p>
-													</div>
-
-													<div class="gallery__caption swiper-slide">
-														<p>06 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
-															государственного университета культуры и искусств.</p>
-													</div>
-
-													<div class="gallery__caption swiper-slide">
-														<p>07 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
-															государственного университета культуры и искусств.</p>
-													</div>
-
-													<div class="gallery__caption swiper-slide">
-														<p>08 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
-															государственного университета культуры и искусств.</p>
-													</div>
-
-													<div class="gallery__caption swiper-slide">
-														<p>09 Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского
-															государственного университета культуры и искусств.</p>
-													</div>
-
-												</div>
-											</div>
+										<div class="slider__toolbar--bottom">
+											<div class="swiper-button-prev swiper-button--alt"><i></i><span>Назад</span></div>
+											<div class="swiper-button-next swiper-button--alt"><i></i><span>Вперед</span></div>
 										</div>
 									</div>
-									<!--gallery end-->
+									<!--quotes end-->
 								</div>
 							</div>
 							<!--CONTENT end-->
