--- a/src/blog.html
+++ b/src/blog.html
@@ -7,7 +7,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Типографика</title>
+	<title>Блог</title>
 	<!--Mobile optimized-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -98,7 +98,7 @@
 										<li class="has-drop">
 											<a href="links.html"><span>Ссылки</span></a>
 										</li>
-										<li class="has-drop">
+										<li class="has-drop current">
 											<a href="blog.html"><span>Блог</span></a>
 										</li>
 									</ul>
