--- a/src/__blog.html
+++ b/src/__blog.html
@@ -1,5 +1,5 @@
 @@include('_head.tpl', {
-	"title": "Типографика",
+	"title": "Блог",
 	"pageClass": ""
 })
 <div class="wrapper">
@@ -9,7 +9,7 @@
 			<div class="cross">
 				<!--HEADER-->
 				@@include('_header.tpl', {
-					"mainNavItemActive": "typography"
+					"mainNavItemActive": "blog"
 				})
 				<!--HEADER end-->
 				<!--MAIN-->
