--- a/src/photos.html
+++ b/src/photos.html
@@ -146,7 +146,7 @@
 											</ul>
 										</li>
 										<li class="has-drop">
-											<a href="videos.html"><span>Видео</span></a>
+											<a href="404.html"><span>Видео</span></a>
 											<ul class="nav-drop">
 												<li>
 													<a href="#"><span>Научная деятельность</span></a>
@@ -177,7 +177,7 @@
 											</ul>
 										</li>
 										<li class="has-drop">
-											<a href="publications.html"><span>Публикации</span></a>
+											<a href="404.html"><span>Публикации</span></a>
 											<ul class="nav-drop">
 												<li>
 													<a href="#"><span>Научная деятельность</span></a>
@@ -208,7 +208,7 @@
 											</ul>
 										</li>
 										<li class="has-drop">
-											<a href="works.html"><span>Труды</span></a>
+											<a href="404.html"><span>Труды</span></a>
 											<ul class="nav-drop">
 												<li>
 													<a href="#"><span>Научная деятельность</span></a>
@@ -239,7 +239,7 @@
 											</ul>
 										</li>
 										<li class="has-drop">
-											<a href="links.html"><span>Ссылки</span></a>
+											<a href="404.html"><span>Ссылки</span></a>
 											<ul class="nav-drop">
 												<li>
 													<a href="#"><span>Научная деятельность</span></a>
