--- a/src/blog.html
+++ b/src/blog.html
@@ -85,220 +85,110 @@
 									<ul class="nav__list">
 										<li class="has-drop">
 											<a href="biography.html"><span>Биография</span></a>
+
+
 											<ul class="nav-drop">
+
 												<li>
-													<a href="#"><span>Научная деятельность</span></a>
+
+													<b class="cond_key">key_12</b>
+													<b class="current_key">key_11</b>
+													<div>
+														<span>key_11</span><i>[object Object]</i>
+													</div>
+
+												</li>
+
+												<li>
+
+													<b class="cond_key">key_12</b>
+													<b class="current_key">key_12</b>
+													<div>
+														<span>key_12</span><i>val_l2</i>
+													</div>
+
+												</li>
+
+												<li>
+
+													<b class="cond_key">key_12</b>
+													<b class="current_key">key_13</b>
+													<div>
+														<span>key_13</span><i>val_l3</i>
+													</div>
+
+												</li>
+
+												<li>
 													<ul>
+
+
 														<li>
-															<a href="#"><span>Защита докторской диссертации</span></a>
+															<span>key_111</span><i>val_111</i>
 														</li>
+
 														<li>
-															<a href="#"><span>Презентации научных трудов</span></a>
+															<span>key_112</span><i>val_112</i>
 														</li>
-														<li class="current">
-															<a href="#"><span>Участие в научных мероприятиях</span></a>
+
+														<li>
+															<span>key_113</span><i>val_113</i>
 														</li>
+
+
 													</ul>
 												</li>
-												<li>
-													<a href="#"><span>Социокультурная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Международная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Учебно-педагогическая деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Досуг</span></a>
-												</li>
+
 											</ul>
+
 										</li>
 										<li class="has-drop">
 											<a href="photos.html"><span>Фотоальбом</span></a>
+
+
 											<ul class="nav-drop">
+
 												<li>
-													<a href="#"><span>Научная деятельность</span></a>
+
+												</li>
+
+												<li>
+
+												</li>
+
+												<li>
 													<ul>
-														<li>
-															<a href="#"><span>Защита докторской диссертации</span></a>
-														</li>
-														<li>
-															<a href="#"><span>Презентации научных трудов</span></a>
-														</li>
-														<li class="current">
-															<a href="#"><span>Участие в научных мероприятиях</span></a>
-														</li>
+
 													</ul>
 												</li>
-												<li>
-													<a href="#"><span>Социокультурная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Международная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Учебно-педагогическая деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Досуг</span></a>
-												</li>
+
 											</ul>
+
 										</li>
 										<li class="has-drop">
 											<a href="404.html"><span>Видео</span></a>
-											<ul class="nav-drop">
-												<li>
-													<a href="#"><span>Научная деятельность</span></a>
-													<ul>
-														<li>
-															<a href="#"><span>Защита докторской диссертации</span></a>
-														</li>
-														<li>
-															<a href="#"><span>Презентации научных трудов</span></a>
-														</li>
-														<li class="current">
-															<a href="#"><span>Участие в научных мероприятиях</span></a>
-														</li>
-													</ul>
-												</li>
-												<li>
-													<a href="#"><span>Социокультурная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Международная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Учебно-педагогическая деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Досуг</span></a>
-												</li>
-											</ul>
+
+
 										</li>
 										<li class="has-drop">
 											<a href="404.html"><span>Публикации</span></a>
-											<ul class="nav-drop">
-												<li>
-													<a href="#"><span>Научная деятельность</span></a>
-													<ul>
-														<li>
-															<a href="#"><span>Защита докторской диссертации</span></a>
-														</li>
-														<li>
-															<a href="#"><span>Презентации научных трудов</span></a>
-														</li>
-														<li class="current">
-															<a href="#"><span>Участие в научных мероприятиях</span></a>
-														</li>
-													</ul>
-												</li>
-												<li>
-													<a href="#"><span>Социокультурная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Международная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Учебно-педагогическая деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Досуг</span></a>
-												</li>
-											</ul>
+
+
 										</li>
 										<li class="has-drop">
 											<a href="404.html"><span>Труды</span></a>
-											<ul class="nav-drop">
-												<li>
-													<a href="#"><span>Научная деятельность</span></a>
-													<ul>
-														<li>
-															<a href="#"><span>Защита докторской диссертации</span></a>
-														</li>
-														<li>
-															<a href="#"><span>Презентации научных трудов</span></a>
-														</li>
-														<li class="current">
-															<a href="#"><span>Участие в научных мероприятиях</span></a>
-														</li>
-													</ul>
-												</li>
-												<li>
-													<a href="#"><span>Социокультурная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Международная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Учебно-педагогическая деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Досуг</span></a>
-												</li>
-											</ul>
+
+
 										</li>
 										<li class="has-drop">
 											<a href="404.html"><span>Ссылки</span></a>
-											<ul class="nav-drop">
-												<li>
-													<a href="#"><span>Научная деятельность</span></a>
-													<ul>
-														<li>
-															<a href="#"><span>Защита докторской диссертации</span></a>
-														</li>
-														<li>
-															<a href="#"><span>Презентации научных трудов</span></a>
-														</li>
-														<li class="current">
-															<a href="#"><span>Участие в научных мероприятиях</span></a>
-														</li>
-													</ul>
-												</li>
-												<li>
-													<a href="#"><span>Социокультурная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Международная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Учебно-педагогическая деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Досуг</span></a>
-												</li>
-											</ul>
+
+
 										</li>
 										<li class="has-drop current">
 											<a href="blog.html"><span>Блог</span></a>
-											<ul class="nav-drop">
-												<li>
-													<a href="#"><span>Научная деятельность</span></a>
-													<ul>
-														<li>
-															<a href="#"><span>Защита докторской диссертации</span></a>
-														</li>
-														<li>
-															<a href="#"><span>Презентации научных трудов</span></a>
-														</li>
-														<li class="current">
-															<a href="#"><span>Участие в научных мероприятиях</span></a>
-														</li>
-													</ul>
-												</li>
-												<li>
-													<a href="#"><span>Социокультурная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Международная деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Учебно-педагогическая деятельность</span></a>
-												</li>
-												<li>
-													<a href="#"><span>Досуг</span></a>
-												</li>
-											</ul>
+
+
 										</li>
 									</ul>
 								</nav>
